package com.company;

public enum LandmarkType {
    GEOLOGICAL, BIOLOGICAL, CULTURAL
}
